--- a/config/settings.yml
+++ b/config/settings.yml
@@ -29,7 +29,7 @@ database:
   host:     "_env:PGHOST:127.0.0.1"
   port:     "_env:PGPORT:5432"
   # See config/test-settings.yml for an override during tests
-  database: "_env:PGDATABASE:aula"
+  database: "_env:PGDATABASE:highkageshop"
   poolsize: "_env:PGPOOLSIZE:10"
 
 copyright: Insert copyright statement here
